test/ui/tests/lowering/out-of-line-modules/empty-subfolder-missing-file.lushui
;;; TEST fail check --no-core

module shapeless

